# fastapi-observability

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yaml  locustfile.py  pyproject.toml  readme.md
etc/grafana/: datasource.yml
etc/loki/: loki-config.yaml
etc/otel/: otel-collector-config.yaml
etc/prometheus/: prometheus.yml
etc/tempo/: tempo.yml
observability_service/: main.py  utils.py
