#[project]
#name = "fastapi-app"
#version = "0.1.0"
#description = "FastAPI Observability Demo Application"
#readme = "README.md"
#requires-python = ">=3.12"

[project]
name = "observability-service"
version = "0.1.0"
readme = "README.md"
description = "Observability Service"
authors = [{ name = "Ulada Rahautsova", email = "ulada.rahautsova@gmail.com" }]
requires-python = ">=3.14"

dependencies = [
    "asyncpg",
    "annotated-types",
    "anyio",
    "asgiref",
    "certifi",
    "charset-normalizer",
    "click",
    "deprecated",
    "databases[postgresql]",
    "fastapi",
    "googleapis-common-protos",
    "grpcio",
    "h11",
    "httpcore",
    "httpx",
    "idna",
    "importlib-metadata",
    "opentelemetry-api",
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp",
    "opentelemetry-exporter-otlp-proto-common",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-instrumentation",
    "opentelemetry-instrumentation-asgi",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-logging",
    "opentelemetry-instrumentation-openai",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-instrumentation-kafka-python",
    "opentelemetry-instrumentation-sqlalchemy",
    "opentelemetry-proto",
    "opentelemetry-sdk",
    "opentelemetry-semantic-conventions",
    "opentelemetry-util-http",
    "packaging",
    "prometheus-client",
    "prometheus-fastapi-instrumentator",
    "protobuf",
    "pydantic",
    "pydantic-core",
    "pydantic-settings",
    "python-json-logger",
    "pyjwt",
    "pwdlib[argon2]",
    "python-multipart",
    "requests",
    "sniffio",
    "sqlalchemy",
    "starlette",
    "typing-extensions",
    "typing-inspection",
    "urllib3",
    "uvicorn",
    "wrapt",
    "zipp",
    "ruff>=0.14.3",
]

[tool.hatch.build.targets.wheel]
packages = ["observability_service"]

#[tool.uv]
## Optional: explicitly specify the package directory
#package-dir = "observability_service"

[project.optional-dependencies]
dev = [
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-github-actions-annotate-failures",
    "pytest-asyncio",
    "pytest-cov",
    "respx",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py314"
line-length = 110
extend-exclude = [
    ".DS_Store",
    ".dockerignore",
    ".gitignore",
    ".idea",
    "__pycache__",
    "dist",
    ".coverage",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "I",  # isort
    "W",  # pycodestyle warnings
    "SIM", # flake8-simplify
    "ASYNC", # flake8-async
    "PT", # flake8-pytest-style
    "ERA", # commented-out code
]

[tool.coverage.run]
branch = true
relative_files = true
omit = [
    "*__init__*",
    "*/tests/*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "prometheus_client.*",
    "opentelemetry.*",
]
ignore_missing_imports = true
